[fix mobile] article title width is weird [fix mobile] article content in text align left

--- a/styles/custom/articles/content.module.scss
+++ b/styles/custom/articles/content.module.scss
@@ -1,5 +1,6 @@
 @import '../../colors';
 @import '../../texts/sizes';
+@import '../../responsive';
 
 #article__content {
   width: 100%;
@@ -10,6 +11,10 @@
   min-height: 77.5vh;
   height:100%;
   text-align: justify;
+
+  @include media(xs) {
+    text-align: left;
+  }
 
   h1, h2, h3, h4, h5, h6 {
     color: $dark-text;
@@ -62,6 +67,11 @@
     box-sizing: border-box;
     position: relative;
     margin: 1em auto;
+    font-style: italic;
+
+    p {
+      color: #999;
+    }
 
     ::before {
       content: '';
